# buildpy-bundler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md  pyproject.toml
patch/: shared.mid
projects/: CMakeLists.txt
projects/app_shared/: CMakeLists.txt
projects/pybind_shared/: CMakeLists.txt
projects/pybind_static/: CMakeLists.txt  main.cpp
projects/simple_shared/: CMakeLists.txt  main.cpp
projects/simple_static/: CMakeLists.txt
src/: buildpy.py
tests/: CMakeLists.txt  depreport.py  match.py  parse.py  test_analyze_deps.py  test_auto_configure.py  test_builder.py  test_dry_run.py  test_install_pkgs.py  test_project.py  test_shellcmd.py  test_size_report.py
