[project]
name = "buildpy-bundler"
version = "0.1.1"
description = "Build a minimal, bespoke CPython runtime from source with size reduction, static linking, and a zipped standard library."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
keywords = [
    "python",
    "build",
    "compile",
    "source",
    "static",
    "embedded",
    "minimal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
    "Topic :: System :: Installation/Setup",
]
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/shakfu/buildpy"
Repository = "https://github.com/shakfu/buildpy"
Issues = "https://github.com/shakfu/buildpy/issues"
Changelog = "https://github.com/shakfu/buildpy/blob/main/py/buildpy/CHANGELOG.md"

[project.scripts]
buildpy = "buildpy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/buildpy.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

